--- a/src/main/resources/templates/admin/article_edit.html
+++ b/src/main/resources/templates/admin/article_edit.html
@@ -104,7 +104,7 @@
                             </div>
                             <div class="am-form-group">
                                 <label for="title" class="am-u-sm-3 am-form-label">分类<span
-                                        class="tpl-form-line-small-title">Content</span></label>
+                                        class="tpl-form-line-small-title"><C></C>ategory</span></label>
                                 <div class="am-u-sm-9">
                                     <select multiple data-am-selected id="select-category">
                                         <th:block th:each="c : ${categories}">
@@ -130,6 +130,5 @@
     </div>
 </div>
 <script th:src="@{/js/article.js}"></script>
-<!-- content end -->
 </body>
 </html>
