--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -33,7 +33,7 @@
                     <div class="widget-body am-fr">
 
                         <form class="am-form tpl-form-line-form" id="userForm">
-                            <input type="hidden" id="user-id" name="id" />
+                            <input type="hidden" id="user-id" name="id"/>
                             <div class="am-form-group">
                                 <label for="user-name" class="am-u-sm-3 am-form-label">姓名<span
                                         class="tpl-form-line-small-title">Name</span></label>
@@ -90,7 +90,8 @@
 
                             <div class="am-form-group">
                                 <div class="am-u-sm-9 am-u-sm-push-3">
-                                    <button type="button" onclick="saveInfo()" class="am-btn am-btn-primary tpl-btn-bg-color-success ">提交
+                                    <button type="button" onclick="saveInfo()"
+                                            class="am-btn am-btn-primary tpl-btn-bg-color-success ">提交
                                     </button>
                                 </div>
                             </div>
