--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,7 +19,7 @@
     <script th:src="@{/assets/js/jquery.min.js}"></script>
 </head>
 <body data-type="index">
-<script src="assets/js/theme.js"></script>
+<script th:src="@{assets/js/theme.js}"></script>
 <div class="tpl-content-wrapper">
 
     <div class="container-fluid am-cf">
