--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,15 +9,14 @@
     <meta name="keywords" content="index">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="renderer" content="webkit">
-    <meta http-equiv="Cache-Control" content="no-siteapp" />
+    <meta http-equiv="Cache-Control" content="no-siteapp"/>
     <link rel="icon" type="image/png" href="assets/i/favicon.png">
     <link rel="apple-touch-icon-precomposed" href="assets/i/app-icon72x72@2x.png">
-    <meta name="apple-mobile-web-app-title" content="Amaze UI" />
-    <link rel="stylesheet" th:href="@{assets/css/amazeui.min.css}" />
-    <link rel="stylesheet" th:href="@{assets/css/amazeui.datatables.min.css}" />
+    <meta name="apple-mobile-web-app-title" content="Amaze UI"/>
+    <link rel="stylesheet" th:href="@{assets/css/amazeui.min.css}"/>
+    <link rel="stylesheet" th:href="@{assets/css/amazeui.datatables.min.css}"/>
     <link rel="stylesheet" th:href="@{assets/css/app.css}">
     <script th:src="@{assets/js/jquery.min.js}"></script>
-
 </head>
 
 <body data-type="login">
@@ -44,7 +43,6 @@
             </div>
 
 
-
             <form class="am-form tpl-form-line-form" id="loginForm">
                 <div class="am-form-group">
                     <input type="text" class="tpl-form-input" id="user-name" name="username" placeholder="请输入账号">
@@ -52,7 +50,8 @@
                 </div>
 
                 <div class="am-form-group">
-                    <input type="password" class="tpl-form-input" id="user-password" name="password" placeholder="请输入密码">
+                    <input type="password" class="tpl-form-input" id="user-password" name="password"
+                           placeholder="请输入密码">
 
                 </div>
                 <div class="am-form-group tpl-login-remember-me">
@@ -66,7 +65,9 @@
 
                 <div class="am-form-group">
 
-                    <button type="button" onclick="login()" class="am-btn am-btn-primary  am-btn-block tpl-btn-bg-color-success  tpl-login-btn">提交</button>
+                    <button type="button" onclick="login()"
+                            class="am-btn am-btn-primary  am-btn-block tpl-btn-bg-color-success  tpl-login-btn">提交
+                    </button>
 
                 </div>
             </form>
@@ -83,6 +84,7 @@
             top.location.href = location.href;
         }
     });
+
     function login() {
         $.ajax({
             type: "POST",
