--- a/src/main/resources/templates/admin/article_list.html
+++ b/src/main/resources/templates/admin/article_list.html
@@ -12,7 +12,7 @@
             <div class="am-u-sm-12 am-u-md-12 am-u-lg-12">
                 <div class="widget am-cf">
                     <div class="widget-head am-cf">
-                        <div class="widget-title  am-cf">文章列表</div>
+                        <div class="widget-title  am-cf">文章列表/article</div>
 
 
                     </div>
@@ -22,7 +22,7 @@
                             <div class="am-form-group">
                                 <div class="am-btn-toolbar">
                                     <div class="am-btn-group am-btn-group-xs">
-                                        <button type="button" class="am-btn am-btn-default am-btn-success"><span
+                                        <button type="button" class="am-btn am-btn-default am-btn-success" onclick="publish()"><span
                                                 class="am-icon-plus"></span> 新增
                                         </button>
                                         <button type="button" class="am-btn am-btn-default am-btn-danger"><span
@@ -37,17 +37,21 @@
                                    id="example-r">
                                 <thead>
                                 <tr>
+                                    <th>ID</th>
                                     <th>文章标题</th>
                                     <th>作者</th>
-                                    <th>时间</th>
+                                    <th>发布日期</th>
+                                    <th>分类</th>
                                     <th>操作</th>
                                 </tr>
                                 </thead>
                                 <tbody th:each="a,astat:${articles.list}">
                                 <tr class="gradeX">
+                                    <td th:text="${astat.index + 1}"></td>
                                     <td><a href="#" th:text="${a.title}"></a></td>
                                     <td th:text="${a.userVo.fullname}"></td>
                                     <td th:text="${dateUtil.dateFormat(a.addTime, 'yyyy-MM-dd')}"></td>
+                                    <td th:text="${a.categories}"></td>
                                     <td>
                                         <div class="tpl-table-black-operation">
                                             <a th:href="@{'/admin/article/'+${a.id}}">
@@ -70,10 +74,6 @@
         </div>
     </div>
 </div>
-<script th:src="@{/assets/js/amazeui.min.js}"></script>
-<script th:src="@{/assets/js/amazeui.datatables.min.js}"></script>
-<script th:src="@{/assets/js/dataTables.responsive.min.js}"></script>
-<script th:src="@{/assets/js/app.js}"></script>
 <script>
     var chou = new chou();
 
@@ -97,6 +97,10 @@
                 }
             })
         })
+    }
+
+    function publish() {
+        window.location.href = "/admin/article/edit"
     }
 </script>
 </body>
