--- a/src/main/resources/templates/admin/gallery.html
+++ b/src/main/resources/templates/admin/gallery.html
@@ -12,9 +12,7 @@
             <div class="am-u-sm-12 am-u-md-12 am-u-lg-12">
                 <div class="widget am-cf">
                     <div class="widget-head am-cf">
-                        <div class="widget-title  am-cf">相册</div>
-
-
+                        <div class="widget-title  am-cf">相册/gallery</div>
                     </div>
 
                     <div class="widget-body  am-fr">
@@ -56,10 +54,6 @@
         </div>
     </div>
 </div>
-<script th:src="@{/assets/js/amazeui.min.js}"></script>
-<script th:src="@{/assets/js/amazeui.datatables.min.js}"></script>
-<script th:src="@{/assets/js/dataTables.responsive.min.js}"></script>
-<script th:src="@{/assets/js/app.js}"></script>
 <script>
     var chou = new chou();
     $(function () {
@@ -106,6 +100,5 @@
         })
     }
 </script>
-<!-- content end -->
 </body>
 </html>
