--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,16 +9,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="renderer" content="webkit">
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
-    <link rel="icon" type="image/png" href="assets/i/favicon.png">
-    <link rel="apple-touch-icon-precomposed" href="assets/i/app-icon72x72@2x.png">
+    <link rel="icon" type="image/png" th:href="@{assets/i/favicon.png}">
+    <link rel="apple-touch-icon-precomposed" th:href="@{assets/i/app-icon72x72@2x.png}">
     <meta name="apple-mobile-web-app-title" content="Amaze UI"/>
-    <script src="assets/js/echarts.min.js"></script>
-    <link rel="stylesheet" href="assets/css/amazeui.min.css"/>
-    <link rel="stylesheet" href="assets/css/amazeui.datatables.min.css"/>
-    <link rel="stylesheet" href="assets/css/app.css">
-    <script src="assets/js/jquery.min.js"></script>
+    <script th:src="@{assets/js/echarts.min.js}"></script>
+    <link rel="stylesheet" th:href="@{assets/css/amazeui.min.css}"/>
+    <link rel="stylesheet" th:href="@{assets/css/amazeui.datatables.min.css}"/>
+    <link rel="stylesheet" th:href="@{assets/css/app.css}">
+    <script th:src="@{assets/js/jquery.min.js}"></script>
     <style>
-        html{overflow:hidden;}
+        html {
+            overflow: hidden;
+        }
     </style>
 </head>
 
