--- a/src/main/resources/templates/admin/gallery.html
+++ b/src/main/resources/templates/admin/gallery.html
@@ -5,7 +5,7 @@
     <title>gallery</title>
 </head>
 <body>
-<script th:src="@{assets/js/theme.js}"></script>
+<script th:src="@{/admin/assets/js/theme.js}"></script>
 <div class="tpl-content-wrapper">
     <div class="row-content am-cf">
         <div class="row">
