--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -208,7 +208,7 @@
         <ul class="sidebar-nav">
             <li class="sidebar-nav-heading">Components <span class="sidebar-nav-heading-info"> 附加组件</span></li>
             <li class="sidebar-nav-link">
-                <a name="home" class="iframeurl">
+                <a name="/admin/home" class="iframeurl">
                     <i class="am-icon-home sidebar-nav-link-logo"></i> 首页
                 </a>
             </li>
@@ -243,13 +243,13 @@
                 </a>
                 <ul class="sidebar-nav sidebar-nav-sub">
                     <li class="sidebar-nav-link">
-                        <a name="admin/article/list" class="iframeurl">
+                        <a name="/admin/article/list" class="iframeurl">
                             <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 文章列表
                         </a>
                     </li>
 
                     <li class="sidebar-nav-link">
-                        <a name="admin/plan/list" class="iframeurl">
+                        <a name="/admin/plan/list" class="iframeurl">
                             <span class="am-icon-angle-right sidebar-nav-link-logo"></span> 计划列表
                         </a>
                     </li>
