--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="renderer" content="webkit">
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
-    <link rel="icon" type="image/png" th:href="@{assets/i/favicon.png}">
-    <link rel="apple-touch-icon-precomposed" th:href="@{assets/i/app-icon72x72@2x.png}">
+    <link rel="icon" type="image/png" th:href="@{/admin/assets/i/favicon.png}">
+    <link rel="apple-touch-icon-precomposed" th:href="@{/admin/assets/i/app-icon72x72@2x.png}">
     <meta name="apple-mobile-web-app-title" content="Amaze UI"/>
-    <link rel="stylesheet" th:href="@{assets/css/amazeui.min.css}"/>
-    <link rel="stylesheet" th:href="@{assets/css/amazeui.datatables.min.css}"/>
-    <link rel="stylesheet" th:href="@{assets/css/app.css}">
-    <script th:src="@{assets/js/jquery.min.js}"></script>
-    <script th:src="@{js/base.js}"></script>
+    <link rel="stylesheet" th:href="@{/admin/assets/css/amazeui.min.css}"/>
+    <link rel="stylesheet" th:href="@{/admin/assets/css/amazeui.datatables.min.css}"/>
+    <link rel="stylesheet" th:href="@{/admin/assets/css/app.css}">
+    <script th:src="@{/admin/assets/js/jquery.min.js}"></script>
+    <script th:src="@{/admin/js/base.js}"></script>
     <link th:href="@{//cdn.bootcss.com/limonte-sweetalert2/6.4.1/sweetalert2.min.css}" rel="stylesheet"/>
     <script th:src="@{//cdn.bootcss.com/limonte-sweetalert2/6.4.1/sweetalert2.min.js}"></script>
-    <script th:src="@{assets/js/amazeui.min.js}"></script>
-    <script th:src="@{assets/js/amazeui.datatables.min.js}"></script>
-    <script th:src="@{assets/js/dataTables.responsive.min.js}"></script>
-    <script th:src="@{assets/js/app.js}"></script>
+    <script th:src="@{/admin/assets/js/amazeui.min.js}"></script>
+    <script th:src="@{/admin/assets/js/amazeui.datatables.min.js}"></script>
+    <script th:src="@{/admin/assets/js/dataTables.responsive.min.js}"></script>
+    <script th:src="@{/admin/assets/js/app.js}"></script>
     <style>
         .swal2-container {
             z-index: 9999 !important;
