--- a/src/main/resources/templates/admin/article_edit.html
+++ b/src/main/resources/templates/admin/article_edit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>article</title>
 </head>
-<script th:src="@{js/wangEditor.min.js}"></script>
+<script th:src="@{/admin/js/wangEditor.min.js}"></script>
 <style>
     /* table 样式 */
     table {
@@ -56,7 +56,7 @@
     }
 </style>
 <body>
-<script th:src="@{assets/js/theme.js}"></script>
+<script th:src="@{/admin/assets/js/theme.js}"></script>
 <div class="tpl-content-wrapper">
     <div class="container-fluid am-cf">
         <div class="row">
@@ -129,6 +129,6 @@
         </div>
     </div>
 </div>
-<script th:src="@{js/article.js}"></script>
+<script th:src="@{/admin/js/article.js}"></script>
 </body>
 </html>
